updated CSS, removed extra files

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,5 +1,7 @@
 @import 'reset';
+
 $sim-blue: #58b6e7;
+$desktop-breaakpoint: 1420px;
 
 
 html {
@@ -10,6 +12,7 @@ html {
 }
 
 .row { 
+	position: relative;
 	display: flex; 
 	flex-flow: row wrap; 
 	justify-content: center;
@@ -17,40 +20,69 @@ html {
 	overflow: visible;
 	background: $sim-blue;
 	height: auto;
+
+	.col-3-12 {
+		flex: 1 0 15em;
+	}
 }
 
-.row .col-3-12 {	
- 	flex: 1 0 15em;
-}
-
-@media (min-width: 1520px) {
+@media (min-width: $desktop-breaakpoint) {
 	.pageSection.parbase.section.character-blurb {
 		margin-right: 12em;
 	}
 }
 
-.pageSection.parbase.section.character-blurb {
-	flex: 1 1 10em;
-	margin-bottom: 5em;
-	margin-left: -8em;
-	border: solid black 3px;
-	border-radius: 5px;
-	transform: skewX(-5deg);
-	box-shadow: 6px 6px 0px #b2b2b2;
-	margin-top: 30%;
+.pageSection {
+	&.parbase {
+		&.section {
+			&.character-blurb {
+				flex: 1 1 10em;
+				margin-bottom: 5em;
+				margin-left: -8em;
+				border: solid black 3px;
+				border-radius: 5px;
+				transform: skewX(-5deg);
+				box-shadow: 6px 6px 0px #b2b2b2;
+				margin-top: 30%;
 
-	p {
-	padding: 1em;
-	padding-left: 2.5em;
-	transform: skewX(5deg);
+				p {
+				padding: 1em;
+				padding-left: 2.5em;
+				transform: skewX(5deg);
+				}
+			}
+		}
+	}	
+}
+
+.par {
+	&.parsys {
+		display: flex;
+		flex-flow: row nowrap;
+		align-items: flex-end;
 	}
+	
 }
 
-.par.parsys {
-	display: flex;
-	flex-flow: row nowrap;
-	align-items: flex-end;
+.parbase {
+	&.imageRenditions {
+		&.section {
+			padding-right: -2em;
+			flex: 1 0 10em;
+			z-index: 1;
+		}
+	}
+
+	&.image.section { 
+		transform: scale(0.75,0.75);
+		position: absolute;
+		top: 0;
+		right: 0;
+		opacity: 0.6;
+	}
+		
 }
+
 
 .row:before {
 	flex: 1 0 10em;
@@ -58,25 +90,8 @@ html {
 	position: absolute;
 	background: white;
 	width: 100%;
-	height: 30%;
-	margin-top: 8em;
+	margin-top: 0; /*to fix flex*/
+	top: 8em;
+	bottom: -1em;
 	border-bottom: solid #4386a9 24px;
 }
-
-.parbase.imageRenditions.section {
-	padding-right: -2em;
-	flex: 1 0 10em;
-	z-index: 1;	
-}
-
-.parbase.image.section { /*fingerprint*/
-	transform: scale(0.75,0.75);
-	position: absolute;
-	top: 0;
-	right: 0;
-	opacity: 0.6;
-}
-
-
-
-
